修改服务脚本